--- a/trunk/docsIncludes/howto/tutorials.html
+++ b/trunk/docsIncludes/howto/tutorials.html
@@ -11,7 +11,7 @@
 	-->
 	
 	<head>
-		<title>Your Title Here -LowRA API Documentation</title>
+		<title>LowRA tutorials - LowRA API Documentation</title>
 		<link rel="stylesheet" href="../../docs/style.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="../../docs/print.css" type="text/css" media="print" />
 		<script language="javascript" type="text/javascript" src="../../docs/asdoc.js"></script>
@@ -20,7 +20,7 @@
 	<body>
 		<script type="text/javascript" language="javascript" src="../../../asdoc.js"></script><script type="text/javascript" language="javascript" src="../../../cookies.js"></script><script type="text/javascript" language="javascript">
 		<!--
-			asdocTitle = 'Your Title Here - LowRA API Documentation';
+			asdocTitle = 'LowRA tutorials - LowRA API Documentation';
 			var baseRef = '../../docs/';
 			window.onload = configPage;
 		--></script>
@@ -36,19 +36,22 @@
 						href="../../docs/class-summary.html">All&nbsp;Classes</a>&nbsp;|&nbsp;
 					<a 	onclick="loadClassListFrame('../../docs/index-list.html')" 
 						href="../../docs/all-index-A.html">Index</a>&nbsp;|&nbsp;
-					<a 	href="../../docs/index.html?howto/YourFileNameHere.html&amp;class-list.html" id="framesLink1">Frames</a>
+					<a 	href="../../docs/index.html?howto/tutorials.html&amp;class-list.html" id="framesLink1">Frames</a>
 					<a 	onclick="parent.location=document.location" 
 						href="" 
 						style="display:none;" 
 						id="noFramesLink1">No&nbsp;Frames</a>
 				</td>
 				<td rowspan="3" align="right" class="titleTableLogo">
-					<img alt="Adobe Logo" title="Adobe Logo" class="logoImage" src="../../images/logo.jpg">
+					<img alt="Adobe Logo" title="Adobe Logo" class="logoImage" src="../../docs/images/logo.jpg">
 				</td>
 			</tr>
 			<tr class="titleTableRow2">
 				<td align="left" id="subTitle" class="titleTableSubTitle">
-					Your Title Here
+					LowRA tutorials
+				</td>
+				<td class="titleTableSubTitle">
+					&nbsp;
 				</td>			
 			</tr>
 			<tr class="titleTableRow3">
@@ -61,7 +64,7 @@
 		<!--
 		if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) 
 		{
-			titleBar_setSubTitle("Your Title Here");
+			titleBar_setSubTitle("LowRA tutorials");
 			
 			titleBar_setSubNav(false,	false,	   false,
 							   false,   false,	   false,
@@ -71,10 +74,15 @@
 							   );
 		}
 		--></script>
+<div class="MainContent">
 		
-		<div class="MainContent">
-			<p>Your Page Content Here</p>
-		</div>
-		
+<h3>Tutorials</h3>	
+
+<a href="howto-loopcommands.html" lang="en-EN" title="How to use LoopCommand and IterationCommand">
+How to use LoopCommand and IterationCommand</a>
+
+<br/>
+
+</div>		
 	</body>
 </html>
