--- a/trunk/docsIncludes/howto/template.html
+++ b/trunk/docsIncludes/howto/template.html
@@ -43,13 +43,14 @@
 						id="noFramesLink1">No&nbsp;Frames</a>
 				</td>
 				<td rowspan="3" align="right" class="titleTableLogo">
-					<img alt="Adobe Logo" title="Adobe Logo" class="logoImage" src="../../images/logo.jpg">
+					<img alt="Adobe Logo" title="Adobe Logo" class="logoImage" src="../../docs/images/logo.jpg">
 				</td>
 			</tr>
 			<tr class="titleTableRow2">
 				<td align="left" id="subTitle" class="titleTableSubTitle">
 					Your Title Here
-				</td>			
+				</td>	
+				<td class="titleTableSubTitle">&nbsp;</td>		
 			</tr>
 			<tr class="titleTableRow3">
 				<td colspan="2">&nbsp;</td>
