- Fixed a link issue in Command, ASyncCommand, AbstractCommand, AbstractSyncCommand and FrontController documentation  - Added a first draft for the lowra assembler reference

--- a/docsIncludes/annexes.html
+++ b/docsIncludes/annexes.html
@@ -2,6 +2,9 @@
 
 <table cellspacing="0" cellpadding="0">
 <tr>
+<td><a href="howto/reference-assembler.html">LowRA Assembler Reference</a><br/></td>
+</tr>
+<tr>
 <td><a href="howto/tutorials.html">Tutorials</a><br/></td>
 </tr>
 </table>
