--- a/docsIncludes/howto/howto-commands.html
+++ b/docsIncludes/howto/howto-commands.html
@@ -89,7 +89,8 @@
 	<li><a href="#plugins">Commands and Plugins</a></li>
 </ul>
 
-<a name="intro"/>
+<hr size="1"/>
+<a name="intro"></a>
 <h2>Introduction</h2>
 <p>
 	You can see below the implementation diagramme of the command pattern in <abbr title="Low level Rework on Actionscript">LowRA</abbr> : 
@@ -98,18 +99,24 @@
 
 <img src="../pictures/CommandModel.jpg" title="The command model in lowra" alt="Command pattern implementation diagramme"/>
 
-<a name="basic"/>
+<hr size="1"/>
+<a name="basic"></a>
 <h2>Basic Commands</h2>
 
-<a name="async"/>
+<hr size="1"/>
+<a name="async"></a>
 <h2>Asynchronous Commands</h2>
 
 
+<a name="#runnable"></a>
+<h3>Links between ASyncCommand and Runnable class</h3>
 
-<a name="stateless"/>
+<hr size="1"/>
+<a name="stateless"></a>
 <h2>Stateless Commands</h2>
 
-<a name="plugins"/>
+<hr size="1"/>
+<a name="plugins"></a>
 <h2>Commands and Plugins</h2>
 
 </div>
