--- a/docsIncludes/howto/howto-loopcommands.html
+++ b/docsIncludes/howto/howto-loopcommands.html
@@ -63,7 +63,7 @@
 		
 		<div class="MainContent">
 
-<h3>A brief introduction to loop and iteration commands</h3>
+<h2>A brief introduction to loop and iteration commands</h2>
 <code>LoopCommand</code> and <code>IterationCommand</code> are a representation of the
 traditionnal loop statements (such <code>for</code> and <code>while</code>) as asynchronous
 commands.
@@ -94,7 +94,8 @@ the general purpose iterators (<code>StringIterator</code>, <code>ArrayIterator<
 to process iteration in a regular way (iterate from 0 to size(), elements by elements).
 </p>
 
-<h3>How the LoopCommand iterate over elements</h3>
+<hr size="1"/>
+<h2>How the LoopCommand iterate over elements</h2>
 
 When creating a <code>LoopCommand</code> object, you also define the concret iteration command
 associated with it. When starting the loop (with the <code>run</code> or <code>execute</code>
