--- a/trunk/docsIncludes/howto/howto-commands.html
+++ b/trunk/docsIncludes/howto/howto-commands.html
@@ -18,7 +18,7 @@
 
 	</head>
 	<body>
-		<script type="text/javascript" language="javascript" src="../../../asdoc.js"></script><script type="text/javascript" language="javascript" src="../../../cookies.js"></script><script type="text/javascript" language="javascript">
+		<script type="text/javascript" language="javascript">
 		<!--
 			asdocTitle = 'How to use the Command pattern implementation in LowRA - LowRA API Documentation';
 			var baseRef = '../../docs/';
