--- a/trunk/docsIncludes/howto/howto-loopcommands.html
+++ b/trunk/docsIncludes/howto/howto-loopcommands.html
@@ -7,7 +7,7 @@
 
 	</head>
 	<body>
-		<script type="text/javascript" language="javascript" src="../../../asdoc.js"></script><script type="text/javascript" language="javascript" src="../../../cookies.js"></script><script type="text/javascript" language="javascript">
+		<script type="text/javascript" language="javascript">
 		<!--
 			asdocTitle = 'How to use LoopCommand and IterationCommand - LowRA API Documentation';
 			var baseRef = '../../docs/';
