- Batch now extends AbstractCommand and provides owner to the sub-commands  - All assembler elements are liste and simply describled in the Assembler (need to be completed) Reference

--- a/docsIncludes/howto/howto-loopcommands.html
+++ b/docsIncludes/howto/howto-loopcommands.html
@@ -7,7 +7,7 @@
 
 	</head>
 	<body>
-		<script type="text/javascript" language="javascript" src="../../../asdoc.js"></script><script type="text/javascript" language="javascript" src="../../../cookies.js"></script><script type="text/javascript" language="javascript">
+		<script type="text/javascript" language="javascript">
 		<!--
 			asdocTitle = 'How to use LoopCommand and IterationCommand - LowRA API Documentation';
 			var baseRef = '../../docs/';
