--- a/docsIncludes/howto/template.html
+++ b/docsIncludes/howto/template.html
@@ -18,7 +18,7 @@
 
 	</head>
 	<body>
-		<script type="text/javascript" language="javascript" src="../../../asdoc.js"></script><script type="text/javascript" language="javascript" src="../../../cookies.js"></script><script type="text/javascript" language="javascript">
+		<script type="text/javascript" language="javascript">
 		<!--
 			asdocTitle = 'Your Title Here - LowRA API Documentation';
 			var baseRef = '../../docs/';
